fix(pronote-summary): increase bottom redirect button spacing

--- a/packages/webcomponents/pronote-summary/src/style.scss
+++ b/packages/webcomponents/pronote-summary/src/style.scss
@@ -32,6 +32,7 @@
   justify-content: end;
 
   &.mobile-only {
+    margin-top: 12px;
     display: flex;
   }
 }
